--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-  --color-primary: rgba(22, 233, 50, 0.6);
+  --color-primary: rgb(14, 182, 36);
   --color-secondary: #9c7af7;
   --color-tertiary: #fff;
 }
@@ -23,6 +23,251 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 300;
   color: var(--color-tertiary);
+  background-color: grey;
+}
+
+.heading-1 {
+  font-size: 5rem;
+}
+
+.heading-2 {
+  font-size: 4rem;
+}
+
+.btn {
+  border: none;
+  background-color: var(--color-primary);
+  padding: 1.5rem;
+  border-radius: 1.5rem;
+  margin: 1rem;
+  -webkit-box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
+  font-size: 1.6rem;
+  font-family: 'Roboto Condensed', sans-serif;
+  -webkit-transition: .3s all;
+  transition: .3s all;
+}
+
+.btn:hover {
+  cursor: pointer;
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
+}
+
+.location__btn {
+  position: fixed;
+  top: 0;
+  left: 5vw;
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 4rem;
+  margin: 3rem 0;
+}
+
+.form__label {
+  font-size: 5rem;
+  font-weight: 400;
+  margin-bottom: 3rem;
+}
+
+.form__input {
+  padding: .5rem;
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: bold;
+  border: none;
+  color: gray;
+}
+
+.form__input:focus {
+  outline: none;
+}
+
+.form__input:focus::-webkit-input-placeholder {
+  opacity: 0;
+}
+
+.form__input:focus:-ms-input-placeholder {
+  opacity: 0;
+}
+
+.form__input:focus::-ms-input-placeholder {
+  opacity: 0;
+}
+
+.form__input:focus::placeholder {
+  opacity: 0;
+}
+
+.form__btn {
+  font-size: 2rem;
+  border-radius: 1rem;
+}
+
+.countries-container {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (35rem)[auto-fit];
+      grid-template-columns: repeat(auto-fit, 35rem);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  grid-gap: 5rem;
+  padding: 5rem 0;
+}
+
+.country {
+  height: 55rem;
+  width: 35rem;
+  background-color: var(--color-primary);
+  padding: 1.5rem;
+  border-radius: 1.5rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 20rem min-content max-content min-content;
+      grid-template-rows: 20rem -webkit-min-content -webkit-max-content -webkit-min-content;
+      grid-template-rows: 20rem min-content max-content min-content;
+  overflow: hidden;
+  justify-items: center;
+}
+
+.country__img {
+  width: 100%;
+  height: 100%;
+  grid-column: 1 / -1;
+  width: 20rem;
+  height: 20rem;
+}
+
+.country__name {
+  grid-column: 1 / -1;
+}
+
+.country__info-container {
+  grid-column: 1 / -1;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+.country__info {
+  padding: 1rem 0;
+  text-align: center;
+  border-bottom: 1px solid var(--color-tertiary);
+}
+
+.country__map, .country__neighbours {
+  padding: 1rem 0;
+  font-size: 2rem;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.country__map {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+}
+
+.country__neighbours {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: #fff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 3rem 5rem black;
+          box-shadow: 0 3rem 5rem black;
+  z-index: 10;
+}
+
+.modal__btn {
+  background-color: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 5;
+}
+
+.hidden {
+  display: none;
+}
+
+.container {
+  padding: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 90vw;
+  margin: 0 auto;
+  position: relative;
   background-color: var(--color-secondary);
+}
+
+.header,
+.app,
+.footer {
+  width: 100%;
+}
+
+.header {
+  text-align: center;
+}
+
+.app {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer {
+  font-size: 4rem;
+  text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
