--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,6 +1,6 @@
 :root {
 
-  --color-primary: rgba(22, 233, 50, 0.6);
+  --color-primary: rgb(14, 182, 36);
   --color-secondary: #9c7af7;
   --color-tertiary: #fff;
 
@@ -24,5 +24,5 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 300;
   color: var(--color-tertiary);
-  background-color: var(--color-secondary);
+  background-color: grey;
 }
