--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,10 +1,30 @@
 .container {
+    padding: 5rem;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90vw;
+    margin: 0 auto;
+    position: relative;
+    background-color: var(--color-secondary);
+}
+
+
+.header,
+.app,
+.footer {
+    width: 100%;
 }
 .header {
-
+text-align: center;
 }
 
 .app {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .footer {
+    font-size: 4rem;
+    text-align: center;
 }
