--- a/css/main.css
+++ b/css/main.css
@@ -43,9 +43,9 @@ body {
   -webkit-box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
           box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
   font-size: 1.6rem;
-  font-family: 'Roboto Condensed', sans-serif;
-  -webkit-transition: .3s all;
-  transition: .3s all;
+  font-family: "Roboto Condensed", sans-serif;
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
 }
 
 .btn:hover {
@@ -86,7 +86,7 @@ body {
 }
 
 .form__input {
-  padding: .5rem;
+  padding: 0.5rem;
   text-align: center;
   font-size: 1.8rem;
   font-weight: bold;
@@ -142,23 +142,27 @@ body {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: 20rem min-content max-content min-content;
-      grid-template-rows: 20rem -webkit-min-content -webkit-max-content -webkit-min-content;
-      grid-template-rows: 20rem min-content max-content min-content;
+  -ms-grid-rows: 15rem min-content max-content min-content;
+      grid-template-rows: 15rem -webkit-min-content -webkit-max-content -webkit-min-content;
+      grid-template-rows: 15rem min-content max-content min-content;
   overflow: hidden;
   justify-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .country__img {
   width: 100%;
   height: 100%;
   grid-column: 1 / -1;
-  width: 20rem;
-  height: 20rem;
+  width: 15rem;
+  height: 15rem;
 }
 
 .country__name {
   grid-column: 1 / -1;
+  text-align: center;
 }
 
 .country__info-container {
