--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,163 +1,153 @@
 .heading-1 {
-    font-size: 5rem;
-
+  font-size: 5rem;
 }
 .heading-2 {
-    font-size: 4rem;
-
+  font-size: 4rem;
 }
 
 .btn {
+  border: none;
+  background-color: var(--color-primary);
+  padding: 1.5rem;
+  border-radius: 1.5rem;
+  margin: 1rem;
+  box-shadow: 0 0 2px 1px rgba(black, 0.3);
+  font-size: 1.6rem;
+  font-family: "Roboto Condensed", sans-serif;
+  transition: 0.3s all;
 
-    border: none;
-    background-color: var(--color-primary);
-    padding: 1.5rem;
-    border-radius: 1.5rem;
-    margin: 1rem;
-    box-shadow: 0 0 2px 1px rgba(black, 0.3);
-    font-size: 1.6rem;
-    font-family: 'Roboto Condensed', sans-serif;
-    transition: .3s all;
-
-    &:hover {
-        cursor: pointer;
-        transform: translateY(-3px);
-    }
+  &:hover {
+    cursor: pointer;
+    transform: translateY(-3px);
+  }
 }
 .location__btn {
-    position: fixed;
-    top: 0;
-    left: 5vw;
+  position: fixed;
+  top: 0;
+  left: 5vw;
 }
-
-
 
 .form {
-    display: flex;
-    width: max-content;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgba(black, 0.3);
-    padding: 4rem;
-    margin: 3rem 0;
+  display: flex;
+  width: max-content;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(black, 0.3);
+  padding: 4rem;
+  margin: 3rem 0;
 
+  &__label {
+    font-size: 5rem;
+    font-weight: 400;
+    margin-bottom: 3rem;
+  }
+  &__input {
+    padding: 0.5rem;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: bold;
+    border: none;
+    color: gray;
+  }
+  &__input:focus {
+    outline: none;
+  }
+  &__input:focus::placeholder {
+    opacity: 0;
+  }
 
-    &__label {
-        font-size: 5rem;
-        font-weight: 400;
-        margin-bottom: 3rem;
-    }
-    &__input  {
-        padding: .5rem;
-        text-align: center;
-        font-size: 1.8rem;
-        font-weight: bold;
-        border: none;
-        color: gray;
-    }
-    &__input:focus {
-        outline: none;
-    }
-    &__input:focus::placeholder {
-        opacity: 0;
-    }
-
-    &__btn {
-        font-size: 2rem;
-        border-radius: 1rem ;
-    }
+  &__btn {
+    font-size: 2rem;
+    border-radius: 1rem;
+  }
 }
 .countries-container {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 35rem);
-    justify-content: center;
-    grid-gap: 5rem;
-    padding: 5rem 0;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 35rem);
+  justify-content: center;
+  grid-gap: 5rem;
+  padding: 5rem 0;
 }
 .country {
-    height: 55rem;
-    width: 35rem;
-    background-color: var(--color-primary);
-    padding: 1.5rem;
-    border-radius: 1.5rem;
+  height: 55rem;
+  width: 35rem;
+  background-color: var(--color-primary);
+  padding: 1.5rem;
+  border-radius: 1.5rem;
 
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 20rem min-content max-content min-content;
-    overflow: hidden;
-    justify-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 15rem min-content max-content min-content;
+  overflow: hidden;
+  justify-items: center;
+  justify-content: center;
 
-    &__img {
-        width: 100%;
-        height: 100%;
+  &__img {
+    width: 100%;
+    height: 100%;
 
-        grid-column: 1 / -1;
-        width: 20rem;
-        height: 20rem;
+    grid-column: 1 / -1;
+    width: 15rem;
+    height: 15rem;
+  }
 
+  &__name {
+    grid-column: 1 / -1;
+    text-align: center;
+  }
 
-    }
+  &__info-container {
+    grid-column: 1 / -1;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+  &__info {
+    padding: 1rem 0;
+    text-align: center;
+    border-bottom: 1px solid var(--color-tertiary);
+  }
 
-    &__name {
-        grid-column: 1 / -1;
-    }
-
-    &__info-container {
-        grid-column: 1 / -1;
-        font-size: 2rem;
-        margin-bottom: 2rem;
-    }
-    &__info {
-        padding: 1rem 0;
-        text-align: center;
-        border-bottom: 1px solid var(--color-tertiary);
-    }
-
-
-
-    &__map,
-    &__neighbours {
-        padding: 1rem 0;
+  &__map,
+  &__neighbours {
+    padding: 1rem 0;
     font-size: 2rem;
     font-weight: 400;
     cursor: pointer;
-    }
-    &__map {
+  }
+  &__map {
+    grid-column: 1 / 2;
+  }
 
-        grid-column: 1 / 2;
-    }
-
-    &__neighbours {
-
-        grid-column: 2 / 3;
-    }
+  &__neighbours {
+    grid-column: 2 / 3;
+  }
 }
 
 .modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 3rem 5rem rgb(0, 0, 0);
-    z-index: 10;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgb(0, 0, 0);
+  z-index: 10;
 
-    &__btn {
-        background-color: transparent;
-        box-shadow: none;
-    }
+  &__btn {
+    background-color: transparent;
+    box-shadow: none;
   }
-  .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 5;
-  }
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 5;
+}
 .hidden {
-    display: none;
+  display: none;
 }
