--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -15,15 +15,18 @@
   font-size: 1.6rem;
   font-family: "Roboto Condensed", sans-serif;
   transition: 0.3s all;
+  cursor: pointer;
 
   &:hover {
-    cursor: pointer;
     transform: translateY(-3px);
+  }
+  &:focus {
+    transform: translateY(1px);
   }
 }
 .location__btn {
   position: fixed;
-  top: 0;
+  top: 5vh;
   left: 5vw;
 }
 
@@ -78,29 +81,35 @@
 
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 15rem min-content max-content min-content;
+  grid-template-rows: 15rem 10rem min-content min-content;
   overflow: hidden;
   justify-items: center;
   justify-content: center;
+  align-items: center;
 
   &__img {
-    width: 100%;
-    height: 100%;
-
     grid-column: 1 / -1;
-    width: 15rem;
+    width: 20rem;
     height: 15rem;
+    padding: 2rem 0;
   }
 
   &__name {
     grid-column: 1 / -1;
     text-align: center;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
   }
 
   &__info-container {
     grid-column: 1 / -1;
     font-size: 2rem;
     margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   &__info {
     padding: 1rem 0;
