--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,30 +1,31 @@
 .container {
-    padding: 5rem;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    width: 90vw;
-    margin: 0 auto;
-    position: relative;
-    background-color: var(--color-secondary);
+  padding: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90vw;
+  margin: 5vh auto;
+  position: relative;
+  background-color: var(--color-secondary);
+  min-height: 90vh;
 }
-
 
 .header,
 .app,
 .footer {
-    width: 100%;
+  width: 100%;
 }
 .header {
-text-align: center;
+  text-align: center;
 }
 
 .app {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .footer {
-    font-size: 4rem;
-    text-align: center;
+  font-size: 4rem;
+  text-align: center;
+  align-self: flex-start;
 }
