--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -81,7 +81,7 @@
 
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 15rem 10rem min-content min-content;
+  grid-template-rows: 15rem 13rem min-content min-content;
   overflow: hidden;
   justify-items: center;
   justify-content: center;
@@ -97,7 +97,7 @@
   &__name {
     grid-column: 1 / -1;
     text-align: center;
-    height: 100%;
+    // height: 100%;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -146,6 +146,13 @@
   &__btn {
     background-color: transparent;
     box-shadow: none;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 3rem;
+    &:hover {
+      transform: none;
+    }
   }
 }
 .overlay {
