--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,13 +1,20 @@
 .container {
   padding: 5rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
   width: 90vw;
   margin: 5vh auto;
   position: relative;
-  background-color: var(--color-secondary);
+  background-image: var(--color-secondary);
   min-height: 90vh;
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 1rem;
+    margin: 5vh 0;
+    width: 100vw;
+  }
 }
 
 .header,
@@ -17,6 +24,9 @@
 }
 .header {
   text-align: center;
+  @media only screen and (max-width: $bp-small) {
+    padding-top: 3rem;
+  }
 }
 
 .app {
@@ -24,8 +34,13 @@
   flex-direction: column;
   align-items: center;
 }
+
 .footer {
   font-size: 4rem;
+  font-weight: 200;
   text-align: center;
-  align-self: flex-start;
+  align-self: flex-end;
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 2rem;
+  }
 }
