--- a/css/main.css
+++ b/css/main.css
@@ -237,6 +237,9 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   grid-gap: 5rem;
   padding: 5rem 0;
 }
@@ -484,6 +487,50 @@ body {
   }
 }
 
+.spinner {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.spinner--map {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+.spinner svg {
+  height: 6rem;
+  width: 6rem;
+  fill: black;
+  -webkit-animation: rotate 2s infinite linear;
+          animation: rotate 2s infinite linear;
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 .container {
   padding: 5rem;
   display: -webkit-box;
@@ -500,7 +547,6 @@ body {
   width: 90vw;
   margin: 5vh auto;
   position: relative;
-  background-image: var(--color-secondary);
   min-height: 90vh;
 }
 
